--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,26 @@
 # Uses Python 3.9.5
 
 # Base libraries
+# TODO: Add libraries that are used in the project
 
 # Code style
 black==22.3
+flake8
+isort==5.10.1
 pytest
+pylint==2.13
+mypy==0.782
+pre-commit==2.20.0
 
 # Pytorch
 --extra-index-url https://download.pytorch.org/whl/cu113
 torch==1.12.0
+torchmetrics==0.10.0
 
 # Data manipulation
 pandas==1.5
-#scikit-learn==1.2
+scikit-learn==1.1.2
 
 # Experiment tracking and reproducibility
 wandb==0.12.5
 protobuf==3.20
-
-# torchvision
-torchvision==0.13.0
-liblzma-dev
