--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,13 @@ scikit-learn==1.1.2
 # Experiment tracking and reproducibility
 wandb==0.12.5
 protobuf==3.20
+
+# Data visualization
+matplotlib==3.5.1
+seaborn==0.11.2
+
+# argparse
+argparse==1.4.0
+
+# PIL
+Pillow==8.4.0
